<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        tools:srcCompat="@android:color/holo_orange_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_hotel_name"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textSize="16sp"
            tools:text="@string/hotel_name" />

        <RatingBar
            android:id="@+id/star_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            android:theme="@style/Widget.AppCompat.RatingBar.Small" />

        <TextView
            android:id="@+id/tv_hotel_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/lato"
            android:textSize="14sp"
            tools:text="@string/hotel_price" />

        <TextView
            android:id="@+id/tv_hotel_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:fontFamily="@font/lato"
            android:textSize="14sp"
            tools:text="@string/hotel_details" />
    </LinearLayout>
</RelativeLayout>