<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/img_hotel"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/hotel_image"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ayodya_resort_bali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@id/img_hotel"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/img_hotel"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hotelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/hotel_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/sr_hotel"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/Widget.AppCompat.RatingBar.Small" />

        <TextView
            android:id="@+id/tv_hotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato"
            android:text="@string/hotelPrice"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hotelDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:lineSpacingExtra="4sp"
            android:lineSpacingMultiplier="1.1"
            android:paddingEnd="8dp"
            android:singleLine="false"
            android:text="@string/hotel_detail"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_hotel"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/roomPhoto1"
                    android:layout_width="200dp"
                    android:layout_height="210dp"
                    android:contentDescription="@string/room_gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/amnaya_resort_bali">
                </ImageView>

                <ImageView
                    android:id="@+id/roomPhoto2"
                    android:layout_width="200dp"
                    android:layout_height="210dp"
                    android:contentDescription="@string/room_gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayodya_resort_bali">
                </ImageView>


                <ImageView
                    android:id="@+id/roomPhoto3"
                    android:layout_width="200dp"
                    android:layout_height="210dp"
                    android:contentDescription="@string/room_gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/amaterra_villas_nusadua">
                </ImageView>

                <ImageView
                    android:id="@+id/roomPhoto4"
                    android:layout_width="200dp"
                    android:layout_height="210dp"
                    android:contentDescription="@string/room_gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/conrad_bali">
                </ImageView>

                <ImageView
                    android:id="@+id/roomPhoto5"
                    android:layout_width="200dp"
                    android:layout_height="210dp"
                    android:contentDescription="@string/room_gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/courtyard_by_marriott_nusadua">
                </ImageView>
            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tv_roomName1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".70"
                android:text="roomName1"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_roomPrice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".30"
                android:text="roomPrice1"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_roomDetail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="roomDetail1"
            android:fontFamily="@font/lato"
            android:lineSpacingMultiplier="1.2"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tv_roomName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".70"
                android:text="roomName2"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_roomPrice2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".30"
                android:text="roomPrice2"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_roomDetail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="roomDetail2"
            android:fontFamily="@font/lato"
            android:lineSpacingMultiplier="1.2"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tv_roomName3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".70"
                android:text="roomName3"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_roomPrice3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight=".30"
                android:text="roomPrice3"
                android:fontFamily="@font/lato_bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_roomDetail3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="roomDetail3"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/lato"
            android:lineSpacingMultiplier="1.2"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>